@@ -18,6 +18,10 @@ python-apt (0.7.100.2) UNRELEASED; urgency=low
     - require new libapt-pkg-dev SetCandidateRelease()
   * python/apt_pkgmodule.cc:
     - strip multiarch by default in RealParseDepends
+    - add optional parameter to allow parse_depends() to keep the
+      multiarch parameter
+  * tests/test_deps.py:
+    - add test forapt_pkg.parse_depends(strip_multiarch=True)
 
  -- Michael Vogt <mvo@debian.org>  Tue, 07 Dec 2010 13:41:07 +0100
 
